go-welcome-app/manifests/canary-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: welcome-app-canary-service
  namespace: welcome-app
spec:
  selector:
    app: welcome-app
  ports:
    - port: 80
      targetPort: 8080
